--- a/index.html
+++ b/index.html
@@ -178,5 +178,9 @@
 				</div><!-- #stream -->
 			</div><!-- #main -->
 		</div><!-- #page-container -->
+<!-- linked jquery library file to the html file-->
+		<script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
+<!-- linked jquery scripts to html index -->
+		<script src="js/animations.js" type="text/javascript"></script>
 	</body>
 </html>
